--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "autoprefixer": "^10.4.20",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "react": "^18.3.1",
